--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <i class="bi bi-1-circle-fill"></i>
 <i class="bi bi-1-circle-fill"></i>
+<i class="bi bi-1-circle-fill"></i>
 
 <router-outlet></router-outlet>
