--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
+ <app-settings></app-settings>
+<app-editpassword></app-editpassword> 
+<app-editpersonaldata></app-editpersonaldata>
 <router-outlet></router-outlet>
