--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+
+
+
+
+<app-search> </app-search>
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <app-cart></app-cart>
+
+       
+       
+      </div>
+    </div>
+  </div> 
+
+
+
+
+
