--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,1 +1,31 @@
-<p>navbar works!</p>
+    
+<header>
+  <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="home">سكن</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="تبديل التنقل">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" routerLink="home">الصفحة الرئيسية</a>
+          </li>
+         
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" routerLink="home">التعريف</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link "><mat-icon matBadge="15"  matBadgeColor="warn">notifications</mat-icon></a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <button class="btn mx-1" type="submit">تسجيل </button>
+          <button class="btn mx-1" type="submit"> دخول</button>
+          <button class="btn mx-1" type="submit">خروج</button>
+
+        </form>
+      </div>
+    </div>
+  </nav>
+</header>
