--- a/src/app/users/component/owner/owner.component.css
+++ b/src/app/users/component/owner/owner.component.css
@@ -8,7 +8,7 @@
 .counter-box {
 display: block;
 height:150px;
-background: #383838;
+background: #fe6f41;
 padding: 40px 20px 37px;
 text-align: center;
 
