--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -2,20 +2,20 @@
 
   <div class="row">
 
-<div class="four col-md-3">
+<div class="four col-md-3 my-1">
   <div class="counter-box colored">
     <span class="counter">2</span>
     <p>إعلانات لم يتم الموافقه عليها بعد</p>
   </div>
 </div>
-<div class="four col-md-3">
+<div class="four col-md-3 my-1">
   <div class="counter-box">
     <i class="fa fa-group"></i>
     <span class="counter">3</span>
     <p>العقارات التى تم تاجيرها</p>
   </div>
 </div>
-<div class="four col-md-3">
+<div class="four col-md-3 my-1">
   <div class="counter-box">
     <i class="fa  fa-shopping-cart"></i>
     <span class="counter">2</span>
