--- a/src/app/shared/component/editpassword/editpassword.component.css
+++ b/src/app/shared/component/editpassword/editpassword.component.css
@@ -25,3 +25,17 @@ input {
 input[type=radio]{
     width: 20%;
 }
+button {
+    background-color:#FE6F41; ;
+    color:white ;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 40%;
+    border-radius: 5px;
+}
+button:hover {
+    background: #353535;
+    opacity: 0.8;
+}
