--- a/src/app/shared/component/editpassword/editpassword.component.html
+++ b/src/app/shared/component/editpassword/editpassword.component.html
@@ -21,7 +21,9 @@
             <label for="exampleInputImage" class="form-label">تأكيد كلمة المرور</label>
             <input type="password" class="form-control" id="exampleInputconfirmpassword">
           </div>
-        
+          <div class="container"> 
+            <button type="button" class="btn  btn-secondary btn-lg">تأكيد</button>
+        </div>    
       </form>
     </body>
     </html> 
