--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
  <app-settings></app-settings>
 <app-editpassword></app-editpassword> 
 <app-editpersonaldata></app-editpersonaldata>
+<app-userfavourites></app-userfavourites>
 <router-outlet></router-outlet>
 
 
