--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 
 <router-outlet></router-outlet>
+<!-- <app-list-all-owner-properities></app-list-all-owner-properities> -->
 
-
+<!-- <app-update-properity-advertising></app-update-properity-advertising> -->
+<app-owner></app-owner>
