--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 <div class="text-center col-md-9 mt-5">
-  <button class="send " type="submit" > إعلن معنا</button>
+  <button class="send " type="submit" routerLink="/AddProperityComponent" > إعلن معنا</button>
 </div>
 
 <div class="col-md-9 py-3">
