--- a/src/app/admin/component/owners/owners.component.css
+++ b/src/app/admin/component/owners/owners.component.css
@@ -1,12 +1,16 @@
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  table {
-    width: 100%;
-  }
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+th.mat-header-cell{
+  text-align: center !important;
+}
+th.mat-sort-header-container {
+  justify-content: center !important;
+  align-items: center;
+}
