--- a/src/app/admin/component/renters/renters.component.html
+++ b/src/app/admin/component/renters/renters.component.html
@@ -4,7 +4,7 @@
       <mat-label>Find Admin</mat-label>
       <input matInput placeholder="Enter Name"  #name (keyup)="findByName(name)">
     </mat-form-field>
-
+</form>
     <div class="mat-elevation mt-2  m-auto ">
         <table mat-table [dataSource]="dataSource"  matSort  class="m-auto border border-5 table  ">
       
