--- a/src/app/shared/component/cart-details/cart-details.component.css
+++ b/src/app/shared/component/cart-details/cart-details.component.css
@@ -21,7 +21,7 @@
   }
   .carousel-control-prev-icon ,.carousel-control-next-icon {
 
-   background-color: #e83e8c;
+   background-color:#FE6F41;
 
 }
 
