--- a/src/app/shared/component/cart-details/cart-details.component.html
+++ b/src/app/shared/component/cart-details/cart-details.component.html
@@ -84,6 +84,7 @@
     </div>
   </div>  
 </mat-card>
+<app-comments></app-comments>
 
   <div class="row mx-5">
     <mat-card-title>مقترحات أخرى قد تعجبك :</mat-card-title>
