--- a/src/app/shared/component/not-found/not-found.component.html
+++ b/src/app/shared/component/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p class="m-5 font-weight-bold">404 page npy found</p>
+<div>
+    <h1 class="m-5 font-weight-bold">404 page not found</h1>
+
+</div>
