--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="">
+          <a class="nav-link" routerLink="addAdmin">
+            <span data-feather="users"></span>
+          اضافة مسؤول
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="requests">
             <span data-feather="bar-chart-2"></span>
             الاعلانات
           </a>
