--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 
 
-<!-- <app-search> </app-search>
+ <app-search> </app-search>
 
   <div class="album py-5 bg-light">
     <div class="container">
@@ -15,5 +15,5 @@
     </div>
   </div> 
 
-  <app-footer> </app-footer> -->
+  <app-footer> </app-footer> 
 
