--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -1,7 +1,7 @@
 
   <mat-card class="container-fluid   ">
-    <div class="row  d-flex flex-wrap align-items-lg-center  justify-content-center">
-      <div class="col-sm-4 col-lg-4 col-md-3  m-1 p-1">
+    <div class="row  flex-wrap align-items-lg-center  justify-content-between">
+      <div class="col-sm-4 col-lg-4 col-md-3   p-1">
         <form class="location " appearance="fill">
           <input type="text" class="text-center"  placeholder="الموقع" [formControl]="control" [matAutocomplete]="auto">
           <mat-autocomplete #auto="matAutocomplete">
@@ -11,7 +11,7 @@
           </mat-autocomplete>
         </form>
       </div>
-      <div class="col-sm-4 col-lg-4 col-md-3 m-1 p-1">
+      <div class="col-sm-4 col-lg-4 col-md-3  p-1">
         <form class="location" appearance="fill">
           <input type="text" class="text-center"  placeholder="النوع" [formControl]="control" [matAutocomplete]="auto">
           <mat-autocomplete #auto="matAutocomplete">
@@ -21,7 +21,7 @@
           </mat-autocomplete>
         </form>
       </div>
-      <div class="col-sm-4 col-lg-4 col-md-3 m-1 p-1">
+      <div class="col-sm-4 col-lg-4 col-md-3 p-1">
         <form class="location" appearance="fill">
           <input type="text" class="text-center" placeholder="عدد الغرف" [formControl]="control" [matAutocomplete]="auto">
           <mat-autocomplete #auto="matAutocomplete">
