--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,7 +2,7 @@ mat-toolbar {
   background: white;
   color: gray;
 }
-
+/* 
 mat-sidenav {
   position: fixed;
   top: 51px;
@@ -25,12 +25,12 @@ mat-sidenav {
 }
 
 .content {
-  height: 100vh;
-  border-radius: 10px;
-  margin: 16px;
-  margin-left: 2px;
-  padding: 16px;
   
+  border-radius: 10px;
+  margin: 2px;
+  margin-left: 2px;
+  padding: 2px;
+  overflow-x: hidden;
   /*display: flex;
   justify-content: center;
   align-items: center;
@@ -59,10 +59,10 @@ mat-sidenav {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
+  -webkit-border-radius:;
+  -moz-border-radius:;
+  -ms-border-radius:;
+  -o-border-radius:;
 }
 
 .name {
@@ -94,7 +94,7 @@ ul li a:hover {
 
   color: #131212;
   font-weight: bold;
-}
+} */
 
 /* .content {
     height: 100vh;
