--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,14 @@
 
  <app-search> </app-search>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-5 ">
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
         <app-cart> </app-cart>
 
+        <app-cart> </app-cart>
+        <app-cart> </app-cart>
        
        
       </div>
