--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -1,46 +1,46 @@
-
-  <mat-card class="container-fluid   ">
-    <div class="row  flex-wrap align-items-lg-center  justify-content-between">
-      <div class="col-sm-4 col-lg-4 col-md-3   p-1">
-        <form class="location " appearance="fill">
-          <input type="text" class="text-center"  placeholder="الموقع" [formControl]="control" [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
-              {{street}}
-            </mat-option>
-          </mat-autocomplete>
-        </form>
-      </div>
-      <div class="col-sm-4 col-lg-4 col-md-3  p-1">
-        <form class="location" appearance="fill">
-          <input type="text" class="text-center"  placeholder="النوع" [formControl]="control" [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
-              {{street}}
-            </mat-option>
-          </mat-autocomplete>
-        </form>
-      </div>
-      <div class="col-sm-4 col-lg-4 col-md-3 p-1">
-        <form class="location" appearance="fill">
-          <input type="text" class="text-center" placeholder="عدد الغرف" [formControl]="control" [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
-              {{street}}
-            </mat-option>
-          </mat-autocomplete>
-        </form>
-      </div>
+<div class="container  mt-5 p-5 ">
+  <div class="row  w-75 justify-content-center m-auto ">
+    <div class="col d-flex justify-content-center">
+      <mat-form-field appearance="fill" [color]="colorControl.value">
+        <mat-label>الموقع</mat-label>
+        <mat-select [formControl]="colorControl">
+          <mat-option value="primary">Primary</mat-option>
+          <mat-option value="accent">Accent</mat-option>
+          <mat-option value="warn">Warn</mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
-
-
-
-    <div class="row d-flex justify-content-center mt-4 ">
-      <div class="col col-md-3 col-lg-2 m-1">
+    <div class="col d-flex justify-content-center">
+      <mat-form-field appearance="fill" [color]="colorControl.value">
+        <mat-label>النوع</mat-label>
+        <mat-select [formControl]="colorControl">
+          <mat-option value="primary">Primary</mat-option>
+          <mat-option value="accent">Accent</mat-option>
+          <mat-option value="warn">Warn</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col d-flex justify-content-center">
+      <mat-form-field appearance="fill" [color]="colorControl.value">
+        <mat-label>عدد الغرف</mat-label>
+        <mat-select [formControl]="colorControl">
+          <mat-option value="primary">Primary</mat-option>
+          <mat-option value="accent">Accent</mat-option>
+          <mat-option value="warn">Warn</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="row  w-75 justify-content-center m-auto ">
+  
+      <div class=" col d-flex justify-content-center m-2">
         <button mat-raised-button>بحث <mat-icon class="field-icon">search</mat-icon> </button>
       </div>
-      <div class="col col-md-3 col-lg-2 m-1">
+      <div class="col d-flex justify-content-center m-2">
         <button mat-raised-button>مسح<mat-icon class="field-icon">filter_alt</mat-icon> </button>
       </div>
-    </div>
-  </mat-card>
+  
+</div>
+  
+</div>
+  
