--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -1,19 +1,19 @@
 <div class="container ">
   <div class="row justify-content-center">
-    <div class="four col-md-3 my-1">
+    <div class="four col-md-3 my-1"  (click)="pending()">
       <div class="counter-box">
         <span class="counter">2</span>
         <p>إعلانات لم يتم الموافقه عليها بعد</p>
       </div>
     </div>
-    <div class="four col-md-3 my-1">
+    <div class="four col-md-3 my-1" (click)="rented()">
       <div class="counter-box">
         <i class="fa fa-group"></i>
         <span class="counter">3</span>
         <p>العقارات التى تم تاجيرها</p>
       </div>
     </div>
-    <div class="four col-md-3 my-1">
+    <div class="four col-md-3 my-1"  (click)="navigate()">
       <div class="counter-box">
         <i class="fa fa-shopping-cart"></i>
         <span class="counter">2</span>
@@ -28,4 +28,4 @@
   </div>
 </div>
 
-
+<!-- <img src=""> -->
