--- a/src/app/shared/component/editpersonaldata/editpersonaldata.component.html
+++ b/src/app/shared/component/editpersonaldata/editpersonaldata.component.html
@@ -11,10 +11,22 @@
       <input type="name" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
       
     </div>
+    
+    <div class="mb-3">
+      <label for="exampleInputEmail" class="form-label">الايميل</label>
+      <input type="email" class="form-control" id="exampleInputEmail">
+    </div>
+    
+
+
     <div class="mb-3">
       <label for="exampleInputImage" class="form-label">الصورة</label>
       <input type="image" class="form-control" id="exampleInputImage">
     </div>
+    <div class="container"> 
+      <button type="button" class="btn  btn-secondary btn-lg">تأكيد</button>
+  </div>   
+    
     
   </form>
 </body>
