--- a/src/app/admin/component/reports-details/reports-details.component.html
+++ b/src/app/admin/component/reports-details/reports-details.component.html
@@ -1,1 +1,8 @@
-<p>reports-details works!</p>
+
+<div class="card w-75">
+    <div class="card-body">
+      <h5 class="card-title">تفاصيل الشكوي</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">رجوع</a>
+    </div>
+  </div>
