--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<header>
+<!-- <header>
   <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="home">سكن</a>
@@ -28,4 +28,4 @@
       </div>
     </div>
   </nav>
-</header>
+</header> -->
