--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
 <app-header> </app-header>
 <app-side-bar> </app-side-bar>
 <router-outlet> </router-outlet>
-<app-footer> </app-footer>
+<!-- <app-footer> </app-footer> -->
