--- a/src/app/auth/component/mail-confirm/mail-confirm.component.html
+++ b/src/app/auth/component/mail-confirm/mail-confirm.component.html
@@ -3,14 +3,49 @@
   dir="rtl"
 >
   <div class="card py-5 px-3">
+    <h5 class="mb-1" id="succ"> </h5>
     <h5 class="mb-1">تفعيل الايميل</h5>
     <span class="mobile-text">برجاء ادخال كود التفعيل المرسل على الايميل </span>
+    <form action="" [formGroup]="confirmCode">
     <div class="d-flex flex-row mt-5">
-      <input type="text" class="form-control" />
+      <input type="text" dir="ltr" class="form-control" formControlName="token"  name="token"/>
+      <div id="code"></div>
+      <div
+      class="alert alert-danger"
+      role="alert"
+      *ngIf="
+      confirmCode.controls['token'].errors &&
+      confirmCode.controls['token'].touched
+      "
+    >
+      <strong
+        *ngIf="
+        confirmCode.controls['token'].errors &&
+        confirmCode.controls['token'].errors['required']
+        "
+        >من فضلك ادخل الكود</strong
+      >
+      <strong
+        *ngIf="confirmCode.controls['token'].errors['minlength']"
+        >كود التفعيل فقط 6 ارقام</strong
+      >
+
+      <strong
+        *ngIf="confirmCode.controls['token'].errors['maxlength']"
+        >كود التفعيل فقط 6 ارقام</strong
+      >
+      <strong
+        *ngIf="confirmCode.controls['token'].errors['pattern']"
+        >الرقم غير صحيح</strong
+      >
+    </div>
     </div>
     <div class="text-center mt-5">
-      <input class="send" type="submit" value="submit" />
+      <input class="send" type="submit" value="submit" [disabled]="confirmCode?.invalid" (click)="onsubmit()" />
     </div>
+  </form>
   </div>
 </div>
+{{confirmCode.value | json}}
+{{confirmCode.status | json}}
 <!-- ---------------------------- -->
