--- a/src/app/admin/component/admins/admins.component.html
+++ b/src/app/admin/component/admins/admins.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
 </form>
 
-    <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm ">
+    <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm " style="overflow-x:auto;">
 
         <table mat-table [dataSource]="dataSource"  matSort  class="m-auto border border-5 table w-100 ">
       
