--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -90,7 +90,7 @@
       <mat-icon *ngIf="sidenav.opened"> apps </mat-icon>
       قائمه
     </button> 
-      <div class="content text-center">
+      <div class="content ">
      
         <router-outlet></router-outlet>
       </div>
