--- a/src/app/shared/component/cart/cart.component.html
+++ b/src/app/shared/component/cart/cart.component.html
@@ -1,21 +1,36 @@
-<div class="col card">
-    <div class="card shadow-sm">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: صورة مصغرة" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">صورة مصغرة</text></svg>
 
-      <div class="card-body">
-        <small class="text-muted">شقه</small>
+    <div class="card shadow-sm m-3" routerLink="/details/{{advertisment.id}}">
 
-        <h2 class="card-text">شقه فاخره في المنصوره</h2>
-        <div class="d-flex justify-content-between align-items-center ">
-            <small class="text-muted"> <span class="material-icons  mx-1 ">location_on</span> شارع بوابة القريه </small>
+      
+        <img [src]="advertisment.advertisement_image[0].image_name" height="200px" width="100%" alt="{{advertisment.advertisement_image[0].image_name}}" >
+      <div class="card-body bg-light ">
+        <div class="container">
+          <div class="row ">
 
-          <div class="btn-group">
-            <button type="button" class="btn mx-1 btn-sm btn-outline-warning">عرض</button>
-            <button type="button" class="btn mx-1 btn-sm btn-outline-warning">تعديل</button>
+            <div class="col px-3 py-2">
+              <div class="d-flex flex-row justify-content-between">
+
+                <p class="mb-2 text-muted">{{advertisment .type}}</p>
+                <div class="d-flex flex-row" *ngIf="advertisment .ratings_count>0">
+                  <mat-icon style="font-size:large;">star</mat-icon>
+                  <p>{{advertisment .ratings_avg_count}}</p>
+                  <p>({{advertisment .ratings_count}})</p>
+                </div>
+
+              </div>
+              <h3 class="mb-0">{{advertisment .title}}</h3>
+              <h3 class="mb-0">{{advertisment .price}}جنيه</h3>
+              <div class="d-flex justify-content-between align-items-center ">
+                <small class="text-muted"> <span class="material-icons   ">location_on</span> {{advertisment.address}}</small>
+              </div>
+              <div class=" mt-2">
+                <button type="button" class="btn mx-1 btn-sm btn-outline-warning">تعديل</button>
+              </div>
+            </div>
           </div>
-         
         </div>
+
+
       </div>
     </div>
-  </div>
-
+ 
