--- a/src/app/shared/component/footer/footer.component.html
+++ b/src/app/shared/component/footer/footer.component.html
@@ -1,31 +1,61 @@
-<!-- Remove the container if you want to extend the Footer to full width. -->
+
+  
+
+  <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="container ">
 
-    <footer class=" text-center text-white">
+  <footer class="text-white text-center text-lg-start" >
     <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><fa-icon [icon]="faFacebook"></fa-icon>
-        </a>
-  
-        <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><fa-icon [icon]="faTwitter"></fa-icon>
-        </a>
-  
-        
-  
-        <!-- Instagram -->
+    <div class="container p-4">
+      <!--Grid row-->
+      <div class="row mt-4">
+        <!--Grid column-->
+        <div class="col-lg-4 col-md-12 mb-1 mb-md-0">
+          <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-2 mx-auto" style="width: 150px; height: 150px;">
+            <img src="https://mdbootstrap.com/img/Photos/new-templates/animal-shelter/logo.png" height="70" alt=""
+                 loading="lazy" />
+          </div>
+          
+        </div>
+        <!--Grid column-->
+        <div class="col-lg-4 col-md-6 mb-1 mb-md-0">
+          
+          <div class="mt-4">
+            <!-- Facebook -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><fa-icon [icon]="faFacebook"></fa-icon>
+            </a>            
+            <!-- Twitter -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><fa-icon [icon]="faTwitter"></fa-icon>
+            </a>
+            <!-- Instagram -->
         <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button" ><fa-icon [icon]="faSquareInstagram"></fa-icon>
         </a>
-  
+          </div>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-4 col-md-6 mb-1 mb-md-0">
+
+          <ul class="fa-ul mt-4" style="margin-left: 1.65em;">
+            
+            <li class="mb-3">
+              <span class="material-icons">email</span><span class="ms-2">info@example.com</span>
+            </li>
+            <li class="mb-3">
+              <span class="material-icons">phone</span><span class="ms-2">+ 01 234 567 88</span>
+            </li>
+          
+          </ul>
+        </div>
+        <!--Grid column-->
+        
       
-      </section>
-      <!-- Section: Social media -->
+      </div>
+      <!--Grid row-->
     </div>
     <!-- Grid container -->
-  
+
     <!-- Copyright -->
     <div class="text-center p-3 link" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 الحقوق محفوظه :
@@ -33,7 +63,6 @@
     </div>
     <!-- Copyright -->
   </footer>
-    
-  </div>
-  <!-- End of .container -->
   
+</div>
+<!-- End of .container -->
