--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,13 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
    
-        
+    background-color: white;    
    
 }
 
 *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     direction: rtl;
 }
