--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -120,7 +120,9 @@ Page Content
                     </div>
                     <p class="mb-5 pb-lg-2" style="color: #393f81;">ليس لدى حساب؟ <a routerLink="/register"
                         style="color: #393f81;">التسجيل</a></p>
-                  </form>
+                      <p><a class="link-dark" routerLink="/forgetpassword">نسيت كلمة المرور</a>
+                      </p>
+                      </form>
 
                 </div>
               </div>
